<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1.5">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20sp"
                android:layout_span="4"
                android:gravity="center_vertical|end"
                android:singleLine="true"
                android:text="@string/questionmark"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_weight="0.5">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20sp"
                android:layout_span="4"
                android:gravity="center_vertical|end"
                android:singleLine="true"
                android:text="@string/showAnswer"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10sp"
            android:layout_marginLeft="10sp"
            android:layout_marginEnd="10sp"
            android:layout_marginRight="10sp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/clear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:text="@string/clear"
                android:textSize="18sp"
                app:backgroundTint="#009688" />

            <Button
                android:id="@+id/sqrt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:text="@string/sqrt"
                android:textSize="18sp"
                app:backgroundTint="#8300965A" />

            <Button
                android:id="@+id/proc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:text="@string/proc"
                android:textSize="18sp"
                app:backgroundTint="#8300965A" />


            <Button
                android:id="@+id/buttonDiv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:text="@string/div"
                android:textSize="30sp"
                app:backgroundTint="#8300965A" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10sp"
            android:layout_marginLeft="10sp"
            android:layout_marginEnd="10sp"
            android:layout_marginRight="10sp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/button7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:text="7"
               android:textSize="18sp"
                app:backgroundTint="#8300965A" />

            <Button
                android:id="@+id/button8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:text="8"
               android:textSize="18sp"
                app:backgroundTint="#8300965A" />

            <Button
                android:id="@+id/button9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:text="9"
               android:textSize="18sp"
                app:backgroundTint="#8300965A" />

            <Button
                android:id="@+id/buttonMul"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:text="@string/mul"
                android:textSize="30sp"
                app:backgroundTint="#8300965A" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10sp"
            android:layout_marginLeft="10sp"
            android:layout_marginEnd="10sp"
            android:layout_marginRight="10sp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:text="4"
               android:textSize="18sp"
                app:backgroundTint="#8300965A" />

            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:text="5"
               android:textSize="18sp"
                app:backgroundTint="#8300965A" />

            <Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:text="6"
               android:textSize="18sp"
                app:backgroundTint="#8300965A" />

            <Button
                android:id="@+id/buttonSub"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:text="@string/sub"
                android:textSize="30sp"
                app:backgroundTint="#8300965A" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10sp"
            android:layout_marginLeft="10sp"
            android:layout_marginEnd="10sp"
            android:layout_marginRight="10sp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:text="1"
               android:textSize="18sp"
                app:backgroundTint="#8300965A" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:text="2"
               android:textSize="18sp"
                app:backgroundTint="#8300965A" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:text="3"
               android:textSize="18sp"
                app:backgroundTint="#8300965A" />

            <Button
                android:id="@+id/buttonAdd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:text="@string/add"
                android:textSize="30sp"
                app:backgroundTint="#8300965A" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10sp"
            android:layout_marginLeft="10sp"
            android:layout_marginEnd="10sp"
            android:layout_marginRight="10sp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonDot"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:text="@string/dot"
                android:textSize="30sp"
                app:backgroundTint="#8300965A" />

            <Button
                android:id="@+id/button0"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5sp"
                android:text="0"
                android:textSize="18sp"
                app:backgroundTint="#8300965A" />

            <Button
                android:id="@+id/buttonAnswer"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5sp"
                android:layout_weight="2.27"
                android:text="@string/ans"
                android:textSize="30sp"
                app:backgroundTint="#009688" />


        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>